Fix missing images and math rendering error

--- a/versions/v1.5.md
+++ b/versions/v1.5.md
@@ -26,7 +26,7 @@ permalink: /versions/v1.5/
      * [CO<sub>2</sub> emissions](#co2-emissions)
   * [Policies and scenarios](#policies-and-scenarios)
 
-<!-- Added by: caleb, at: Mon Mar  1 16:23:35 PST 2021 -->
+<!-- Added by: caleb, at: Mon Mar  1 17:25:52 PST 2021 -->
 
 <!--te-->
 ## Introduction
@@ -212,7 +212,7 @@ Where:
 
   - \\(k\\) *= Shape parameter = 5*
 
-![](/assets/faz_surv.svg)  
+![](/roadmap-doc/assets/faz_surv.svg)  
 The steepness parameter is calibrated using historical stock and sales
 inventories. Most regions calibrate the from-age-zero survival curves
 using stock and sales data from the MoMo database, however some regions
@@ -240,7 +240,7 @@ $$\text{Stock}_{CY,\ MY} = \ \text{Stock}_{CY - 1,\ MY}\  \times \ \text{Surviva
 In the case of age zero vehicles (CY = MY) sales are used instead of the
 previous year’s stock:
 
-$$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{\ MY}}\  \times \ \text{Survival}_{C,\ V}(0)$$
+$$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(0)$$
 
 ## Mileage
 Total vehicle-kilometers traveled (VKT) is calculated by multiplying the
@@ -431,7 +431,7 @@ and useful life ages by control level. For example, China only starts to
 have warranty requirements in China VI, and more recent standards, for
 example, China VI, Euro VI and US2004+, require longer useful life.
 
-![](/assets/high_ems_age_effects.svg)
+![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
 Qualitative depiction of the implementation of age effects. Adapted from
 MOVES2014 technical report.
@@ -452,10 +452,10 @@ Where:
   - \\(\lbrack S\rbrack\left( \text{ppm} \right)\ \\) = fuel-sulfur level
     (ppm)
 
-  - \\(\frac{\text{MW}_{\text{SO}_{2}}\ }{\text{MW}_{S}}\\) = the ratio of
+  - \\(\frac{\text{MW}\_{\text{SO}\_{2}}\ }{\text{MW}\_{S}}\\) = the ratio of
     molecular weight of sulfur dioxide to sulfur = 2.0
 
-  - \\(f\text{SO}_{2}\\) = Fraction of fuel sulfur that is converted to
+  - \\(f\text{SO}\_{2}\\) = Fraction of fuel sulfur that is converted to
     gaseous SO<sub>2</sub> emissions (1 - fraction converted to
     SO<sub>4</sub>).
 
@@ -463,8 +463,8 @@ This equation simplifies to:
 
 $$\text{SO}_{2}\left( g \right)\  = \ \text{FC}(g)\  \times \ \text{SO}_{2}\ \text{EF}\ (g/\text{ppm})\  \times \ S(\text{ppm})$$
 
-where \\(\text{SO}_{2}\text{\ EF}\\) is the emission factor specific to
-HDVs and LDVs by emission control technology.
+where \\(\text{SO}\_{2}\text{EF}\\) is the emission factor specific to HDVs
+and LDVs by emission control technology.
 
 SO<sub>4</sub> emissions are calculated:
 
@@ -475,19 +475,19 @@ Where:
   - \\(\text{NonECPMB}\\) = the reference non-elemental carbon
     PM<sub>2.5</sub> emission rate
 
-  - \\(S_{B}\\) = the sulfate reference fraction
+  - \\(S\_{B}\\) = the sulfate reference fraction
 
   - \\(x\\) = the user-supplied fuel sulfur level
 
-  - \\(x_{B}\\) = the reference fuel sulfur level
+  - \\(x\_{B}\\) = the reference fuel sulfur level
 
-  - \\(F_{B}\\) = the percentage of sulfate originating from the fuel
+  - \\(F\_{B}\\) = the percentage of sulfate originating from the fuel
     sulfur in the reference case
 
-  - \\({SO4}_{x}\\) = sulfate emissions at the user-supplied fuel sulfur
+  - \\({SO4}\_{x}\\) = sulfate emissions at the user-supplied fuel sulfur
     level
 
-The \\(S_{B}\\), \\(F_{B}\\), and \\(x_{B}\\), parameters vary by vehicle
+The \\(S_{B}\\), \\(F_{B}\\), and \\(x\_{B}\\), parameters vary by vehicle
 type, model year group, and emission process.
 
 ### Biodiesel effects
@@ -527,7 +527,7 @@ carbon intensity from the period 2035-2040 until 2050 but caps the
 maximum reduction at 95% from 2018 levels. Any electricity consumption
 before 2018 uses the 2018 values.
 
-![](/assets/WEO 2019 SDS.svg)
+![](/roadmap-doc/assets/WEO 2019 SDS.svg)
 
 ## Policies and scenarios
 The Roadmap model is designed to explore the implications of national
