Add pdf version of documentation

--- a/versions/v1.5.md
+++ b/versions/v1.5.md
@@ -26,7 +26,7 @@ permalink: /versions/v1.5/
      * [CO<sub>2</sub> emissions](#co2-emissions)
   * [Policies and scenarios](#policies-and-scenarios)
 
-<!-- Added by: caleb, at: Mon Mar  1 17:25:52 PST 2021 -->
+<!-- Added by: caleb, at: Mon Mar  1 17:41:11 PST 2021 -->
 
 <!--te-->
 ## Introduction
@@ -551,4 +551,4 @@ Scenarios can define the following inputs:
 
 For more detail on how to run a scenario refer to the User Guide.
 
-<button name='download' onclick='/Roadmap v1.5 Model Documentation.pdf'>Download as PDF</button>
+<button name='download' onclick="location.href='../Roadmap v1.5 Model Documentation.pdf'">Download as PDF</button>
