--- a/versions/v1.5.md
+++ b/versions/v1.5.md
@@ -11,8 +11,8 @@ permalink: /versions/v1.5/
      * [Projected sales](#projected-sales)
      * [Used vehicle imports](#used-vehicle-imports)
   * [Stock turnover](#stock-turnover)
-     * [From-age-zero](#from-age-zero)
-     * [EU countries and year-over-year turnover](#eu-countries-and-year-over-year-turnover)
+     * [From-age-zero turnover](#from-age-zero-turnover)
+     * [Year-over-year turnover](#year-over-year-turnover)
   * [Mileage](#mileage)
      * [Mileage degradation](#mileage-degradation)
      * [Scrappage policies](#scrappage-policies)
@@ -25,8 +25,10 @@ permalink: /versions/v1.5/
      * [Biodiesel effects](#biodiesel-effects)
      * [CO<sub>2</sub> emissions](#co2-emissions)
   * [Policies and scenarios](#policies-and-scenarios)
+     * [Scenario inputs](#scenario-inputs)
+     * [Integration with other models](#integration-with-other-models)
 
-<!-- Added by: caleb, at: Mon Mar  1 17:41:11 PST 2021 -->
+<!-- Added by: caleb, at: Wed Apr 21 13:52:56 EDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -39,12 +41,13 @@ emissions of both greenhouse gases (GHGs) and local air pollutants. It
 is designed to allow transparent, customizable estimation of
 transportation emissions for a broad range of policy cases.
 
-Making use of the ICCT’s comprehensive understanding of worldwide
-transportation policies, the model provides annual estimates of both
-current emissions and future emissions under currently adopted policies
-out to 2050. Roadmap estimates historical and projected fuel lifecycle
-CO<sub>2</sub> emissions as well as 15 local air pollutants. The model
-includes six vehicle types and four fuel types.
+Making use of the ICCT’s comprehensive tracking of worldwide
+transportation policies, the model provides annual estimates of
+historical and future emissions under currently adopted policies out to
+2050. Roadmap estimates historical and projected fuel lifecycle
+CO<sub>2</sub> emissions as well as emissions of 15 local air
+pollutants. This version of the model includes six vehicle types and
+four fuel types.
 
 | Roadmap name | Vehicle category | Description                                   |
 | ------------ | ---------------- | --------------------------------------------- |
@@ -57,48 +60,53 @@ includes six vehicle types and four fuel types.
 
 | Roadmap fuel | Description                                                               |
 | ------------ | ------------------------------------------------------------------------- |
-| Diesel       | Diesel and biodiesel                                                      |
+| Diesel       | Diesel and biodiesel blends                                               |
 | Gasoline     | Gasoline and ethanol blends                                               |
 | Gas          | Natural gas and LPG                                                       |
 | Elec         | Zero-emission vehicles, including battery electric and hydrogen fuel cell |
 
-Many of the key model inputs are sourced from the IEA Mobility Model
+Many of the default model inputs are sourced from the IEA Mobility Model
 (MoMo)’s June 2020 version. Additional country-specific data is included
-for key regions where available. Using sales inputs from MoMo and
-calibrated survival curves, Roadmap’s turnover module first compiles a
-detailed inventory of vehicle stock. Applying per-vehicle mileage rates
-and energy intensities from MoMo, the model next calculates detailed
-energy consumption estimates. These, in turn, are the key input to the
-final emissions calculations. This document describes the inputs and
-methods used in each major calculation step as well as some additional
-optional components available to users.
+for key regions where available. Using sales inputs and calibrated
+survival curves, Roadmap’s turnover module first compiles a detailed
+inventory of vehicle stock. Applying per-vehicle mileage rates and
+energy intensities, the model next calculates detailed energy
+consumption estimates. These, in turn, are a key input to the emissions
+calculations. This document describes the inputs and methods used in
+each major calculation step as well as some additional optional
+components available to users.
 
 ## Sales
-Annual vehicle sales are the main driver of vehicle stock within
-Roadmap. MoMo provides historical sales data for 45 regions, including
-31 individual countries.
+Together with vehicle survival curves, annual vehicle sales are the main
+driver of vehicle stock within Roadmap. Default historical data on
+vehicle sales are sourced from the MoMo database, which provides
+historical sales data for 45 regions, including 31 individual countries.
 
 ### Historical sales
 
 For countries within aggregate MoMo regions, new vehicle sales are
 disaggregated based on each country’s share of energy consumption within
 the region. Energy balances are derived from IEA’s World Energy Balances
-2017 edition, which covers road transport energy consumption by fuel
-type from 1971-2015. For years after 2015, the relative 2015 shares are
-applied. Based on the relative amounts of fuel consumption in the World
-Energy Balances, Roadmap disaggregates vehicle sales into 4 technology
-types: diesel, gasoline, natural gas, and electric. Historical sales for
-several countries are updated using local data.
+2019 edition, which covers road transport energy consumption by fuel
+type from 1971-2018. For years after 2018, the relative 2018 shares are
+applied. For countries within aggregate MoMo regions, country-specific
+vehicle sales estimates are obtained by multiplying the regional sales
+volumes for each of the 4 fuel types (diesel, gasoline, gas, and
+electric) by the equivalent regional fuel consumption shares in the
+World Energy Balances. Historical sales for several countries are
+updated using local data.
 
 ### Projected sales
 
 Sales are projected using compound annual growth rates (CAGRs) which
-have been calibrated to projected vehicle activity growth rates. For EU
-regions, activity growth rates are derived from the [EU Reference
+have been calibrated based on projected vehicle activity growth rates.
+For EU countries, activity growth rates are derived from the [EU
+Reference
 Scenario 2016](https://ec.europa.eu/energy/data-analysis/energy-modelling/eu-reference-scenario-2016_en).
-For the rest of the world, MoMo growth rates are used. The following
-equation is used to project sales for each country (\\(C\\)) and vehicle
-type (\\(V)\\):
+For the rest of the world, growth rates are derived from MoMo’s freight
+and passenger activity projections under the IEA’s New Policies
+Scenario. The following equation is used to project sales for each
+country (\\(C\\)) and vehicle type (\\(V)\\):
 
 $$\text{Sales}_{C,\ V,y2} = \text{Sales}_{C,V,y1}\  \times \left( \ 1 + \text{CAGR}_{C,V,G} \right)^{y2 - y1}$$
 
@@ -111,7 +119,7 @@ Where:
   - \\(G\\) = The growth period \\(y1\\) to \\(y2\\)
 
 In all cases, the first \\(y1\\) is the model base year (2018). For some
-countries and vehicles multiple growth periods are used, in which case
+countries and vehicles, multiple growth periods are used, in which case
 the calculation is performed again for the next growth period but using
 the original \\(y2\\) as the new start year. For example, a region that
 has CAGRs defined for 2018-2030, 2030-2040, and 2040-2050 will result in
@@ -150,18 +158,17 @@ vehicles to select non-EU neighbors such as Serbia, Turkey, and Albania.
 Passenger cars are the most imported used vehicle. Most countries will
 consider the amount of air pollution that is generated by an imported
 vehicle when calculating their registration tax, and some countries such
-as Finland, Hungary, and Serbia outright ban import of vehicles that do
-not adhere to certain EU pollution standards (Generally at least Euro 3
-for passenger vehicles, and Euro 5 for commercial vehicles). The
-Ecologic report also estimates the volume of used vehicles imported by a
-certain country (2017 being the year of estimate), and this volume is
-used in conjunction with the new vehicle sales data from the model to
-obtain a used/new sales ratio for each country and vehicle type, which
-is assumed to be constant going into the future.
+as Finland, Hungary, and Serbia outright ban the import of vehicles that
+do not adhere to certain EU pollution standards (generally at least Euro
+3 for passenger vehicles, and Euro 5 for commercial vehicles). The
+Ecologic report also estimates the volume of used vehicles imported by
+specific countries in 2017. These volumes are used in conjunction with
+the new vehicle sales data from the model to obtain a used/new sales
+ratio for each country and vehicle type, which by default is assumed to
+be constant going into the future.
 
-Vehicle age is necessary for year-over-year turnover calculations and
-estimating the control technologies and is determined one of several
-ways:
+The ages and emission control technologies of used vehicle imports are
+determined one of several ways:
 
 1.  Based on the maximum age limit set by some vehicle-importing
     countries
@@ -169,38 +176,38 @@ ways:
 2.  Based on the minimum Euro standard set by some vehicle-importing
     countries
 
-3.  Based on the average age specified in the used vehicle imports data
-    set
+3.  Based on country-specific assumptions for the average age of used
+    vehicle imports
 
-4.  Based on default ages for countries with no specific input data
+4.  Based on default ages applied to countries with no specific input
+    data
 
-See the emission standards section below for more details on determining
-vehicle age.
+See the emission standards section for more details on determining the
+age of used vehicle imports.
 
-Because vehicle imports are highly variable year to year, the model
-assumes that future shares of new versus used vehicle sales is an
-average of the 5 most recent years of data. This share is assumed to
-remain constant for all projected years, however users may provide
+Because vehicle imports are highly variable year to year, by default the
+model assumes that the future ratio of used imports to new vehicle sales
+is an average of the 5 most recent years of data. This share is assumed
+to remain constant for all projected years; however users may provide
 alternate shares to replace the default assumptions.
 
 ## Stock turnover
 Roadmap keeps track of the age distribution of the fleet at every
 timestep based on new vehicle sales, the import age of used vehicles,
-and region and vehicle specific retirement rates. There are two methods
-used to estimate stock turnover, one for EU countries and another for
-all other regions.
+and region- and vehicle-specific retirement rates. There are two methods
+used to estimate stock turnover: one is based on the fraction of
+vehicles surviving from the original sales year, and the other is based
+on the fraction of vehicles surviving from one year to the next.
 
-### From-age-zero
+### From-age-zero turnover
 
 From-age-zero survival curves represent the fraction of vehicles
-surviving from the original sales year. For used vehicles this means
-that the survival rates are not set based on age, but rather how long
-the vehicle has been in the country. These survival curves are modeled
-using Weibull distributions (see [Hao et al.
+surviving from the original sales year. These survival curves are
+modeled using Weibull distributions (see [Hao et al.
 (2011)](https://www.researchgate.net/publication/226620148_Vehicle_survival_patterns_in_China)
 for more details).
 
-Survival curves are defined:
+These survival curves are defined as:
 
 $${e^{- \left( \frac{x}{\lambda} \right)}}^{k}$$
 
@@ -214,16 +221,20 @@ Where:
 
 ![](/roadmap-doc/assets/faz_surv.svg)  
 The steepness parameter is calibrated using historical stock and sales
-inventories. Most regions calibrate the from-age-zero survival curves
-using stock and sales data from the MoMo database, however some regions
-use more detailed national inventories for recent years. Therefore, for
-each country (\\(C\\)) and vehicle type (\\(V)\\), the vehicle stock in a
-calendar year (\\(CY)\\) of a given model year (\\(\text{MY}\\)) is
-calculated:
+inventories. For most regions, the default from-age-zero survival curves
+are calibrated using stock and sales data from the MoMo database;
+however, some regions use more-detailed national fleet data for recent
+years. For each country (\\(C\\)) and vehicle type (\\(V)\\), the vehicle
+stock in a calendar year (\\(CY)\\) of a given model year (\\(\text{MY}\\))
+is calculated:
 
 $$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(CY - MY)$$
 
-### EU countries and year-over-year turnover
+From-age-zero survival curves are applied by default to all countries
+for new sales as well as used vehicle imports. For used vehicles, these
+survival curves apply starting from when the vehicle enters the country.
+
+### Year-over-year turnover
 
 The alternate method for estimating fleet turnover uses year-over-year
 survival curves. These curves represent the fraction of vehicles
@@ -237,95 +248,92 @@ of a given model year (\\(\text{MY}\\)) is calculated:
 
 $$\text{Stock}_{CY,\ MY} = \ \text{Stock}_{CY - 1,\ MY}\  \times \ \text{Survival}_{C,\ V}(CY - MY)$$
 
-In the case of age zero vehicles (CY = MY) sales are used instead of the
-previous year’s stock:
+In the case of age zero vehicles (CY = MY), sales are used instead of
+the previous year’s stock:
 
 $$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(0)$$
+
+The year-over-year curves are applied by default to EU countries for new
+sales as well as used vehicle imports. This method is applied in order
+to accommodate detailed inputs on the starting age distribution of the
+vehicle stock and to model intra-EU vehicle trade.
 
 ## Mileage
 Total vehicle-kilometers traveled (VKT) is calculated by multiplying the
 number of vehicles in the stock by the average annual mileage, based on
-vehicle type and country. Per-vehicle mileage rates are assumed to
-remain constant in future years.
+the vehicle type and country. Historical per-vehicle mileages are input
+and calibrated to align model estimates of energy consumption with
+historical energy balances. Unless otherwise specified, annual mileages
+are assumed to remain constant in future years.
 
 ### Mileage degradation
 
 Optionally, an age-based mileage adjustment can be made which applies
-mileage degradation curves to the fleet. This will not significantly
-change total VKT but shifts mileage to newer vehicles.
+mileage degradation curves to the fleet. This does not significantly
+alter total VKT, but it shifts mileage to newer vehicles.
 
 ### Scrappage policies
 
-Roadmap can also model policies that are designed to limit the number of
-certain types of vehicles (typically older, more polluting, vehicles) on
-the road. While these policies may have an effect on vehicle stock, the
-target of these policies is vehicle activity and so are only modeled as
-affecting VKT. Typically, these policies are either scrappage policies
-and low-emission zones.
+Roadmap can also model the impacts of policies that are designed to
+shift activity from older, typically more polluting, vehicles to newer
+vehicles. Examples of such policies include scrappage and/or retrofit
+programs and low-emission zones. While these policies are likely to have
+effects on vehicle stock, these policies are currently only modeled as
+shifts in VKT among vehicle technologies as opposed to affecting the
+total level of VKT or vehicle stock. In other words, any scrappage of
+older vehicles (that would have traveled a certain amount of VKT) is
+treated as an equivalent increase in VKT by newer vehicles.
 
-The key premise is that these policies are modeled as changes in the
-distribution of VKT across the fleet as opposed to changes in stock.
-Therefore, any scrappage of older vehicles (that would have traveled a
-certain amount of VKT) results in an equivalent increase in VKT of newer
-vehicles. This module takes as input a percent of VKT for a vehicle
-population (based on any of age, range, standard, vehicle type, fuel
+This module takes as an input the percent of VKT for each specified
+vehicle population (based on any of age, standard, vehicle type, fuel
 type) that should be reassigned to newer vehicles. Users can also
 specify the fuel type and model year of the vehicles that receive the
 shifted activity.
 
 ## Vehicle efficiency
-Roadmap’s default data includes vehicle- and powertrain-specific fuel
-economy for historical model years. The fuel economy database contains
-vehicle and fuel types that are more detailed than Roadmap’s vehicle and
-fuel categories but less detailed than Roadmap’s individual countries.
-Average fuel economy is first determined by calculating the
-sales-weighted average for new vehicles, using sales volumes from the
-same database. Individual countries within each aggregate region are
-assigned the same energy intensity values.
+Roadmap’s default data on the energy intensities of new vehicles are
+derived from a combination of country-specific data sources, ICCT
+analyses, and historical data from the MoMo database. Vehicle- and
+powertrain-specific energy intensities by model year are sales-weighted
+and adjusted to reflect differences between on-road performance and test
+cycle values. In countries that are not covered individually by
+available data sources or analysis, default energy intensities are based
+on the matching aggregate region in the MoMo database.
 
-Because many regions have little or no EV sales for each vehicle type,
-the energy intensity of EVs is determined separately. Instead of trying
-to extrapolate from the incomplete fuel economy data, we assume EV
-energy intensity is just a fixed fraction of ICE energy intensity. The
-fraction is based on gasoline vehicles of the same type for MC and PC,
-and diesel vehicles of the same type for all others.
+Because many regions do not yet have substantial volumes of EV sales
+covering all vehicle types, the energy intensity of EVs is determined
+separately. By default, EV energy intensity inputs are defined as a
+ratio of ICE energy intensity (e.g., 0.3). These ratios are based on
+gasoline vehicles of the same type for MC and PC and on diesel vehicles
+of the same type for all other vehicle types. Users can adjust these
+energy intensity ratios for any combination of countries, vehicle types,
+and model years.
 
-| Vehicle | ICE fuel | EV efficiency fraction |
-| ------- | -------- | ---------------------- |
-| MC      | Gasoline | 0.22                   |
-| PC      | Gasoline | 0.26                   |
-| LCV     | Diesel   | 0.26                   |
-| MDT     | Diesel   | 0.24                   |
-| HDT     | Diesel   | 0.23                   |
-| Bus     | Diesel   | 0.23                   |
-
-Fuel economy is projected by applying annualized changes in energy
-intensity for each vehicle type out to 2030 for 16 world regions
-(defined in the model as RoadmapRegion). Annual rates of efficiency
-improvements are the same for all ICE vehicles. These inputs reflect
-annualized reductions in real-world fuel consumption (after applying
-on-road adjustment / CO2 gap). No efficiency improvements are assumed
-from 2030 to 2050.
-
-The ICCT additionally estimates annual energy intensity improvements
-(2020 to 2030) for China and Japan based on currently adopted policies.
+Projected new vehicle energy intensities are calculated based on
+user-specified inputs. By default, these inputs are specified as
+annualized rates of efficiency improvement by vehicle type for 16 world
+regions (defined in the model as RoadmapRegion); however, the user can
+supply detailed inputs for any combination of countries, vehicle types,
+fuel types, and calendar years. These inputs are intended to reflect
+changes in real-world fuel consumption (after applying on-road
+adjustment / CO2 gap).
 
 ## Emissions
 ### Emissions standards
 
 On-road emissions are heavily dependent on the emissions control
 technologies of the vehicle fleet. The Roadmap model contains a
-frequently updated database of emission control regulations for 75
-countries and the EU. Roadmap assumes that from the year a regulation
+frequently updated database of emission control regulations for at least
+75 countries and the EU. Roadmap assumes that from the year a regulation
 takes effect onward, all new vehicles are sold with the required
 emission control technologies. (For more on how Roadmap accounts for
 tampered/degraded controls, see High emitters below.) Emission standards
 are classified based on their closest equivalents within the Euro, US,
 or China emission standard categories.
 
-The emission standards of imported vehicles are harder to determine.
-Many countries have policies that restrict old or dirty vehicles. The
-three cases in Roadmap models are:
+The emission standards of imported vehicles are more difficult to
+determine. Many countries have policies that restrict old or dirty
+vehicles. The three cases included in Roadmap are:
 
 1.  A complete ban of used vehicle imports
 
@@ -346,23 +354,28 @@ timeline is taken from the country with the greatest share of the
 exports.
 
 In the third case the emission standard is restricted to the standard
-given by the country’s policies. Using the reverse process used in case
-2, this standard is used to estimate the age of the entering vehicle.
-Similarly, it is conservatively assumed that all imported vehicles are
-the maximum age that still comply with the control standard.
+given by the country’s policies. This case can also be used to directly
+input the emission control levels assumed for imported used vehicles.
+Using the reverse process used in case 2, this standard is used to
+estimate the age of the entering vehicle. Similarly, it is
+conservatively assumed that all imported vehicles are the maximum age
+that still comply with the control standard.
 
 In all cases, Roadmap assumes the emissions performance of used vehicle
 imports is equivalent to or worse than new vehicles.
 
 ### Emission factors
 
-Tailpipe emission factors are primarily sourced from the European
-Environment Agency’s European Monitoring and Evaluation Programme (EMEP)
-and the Handbook Emission Factors for Road Transport (HBEFA) with the
-exception of the USA and China. Electric and other zero-emission
-vehicles are assumed to emit no air pollutants. Currently the Roadmap
-model does not estimate non-exhaust emissions such as brake and tire
-wear.
+Tailpipe emission factors are sourced from a combination of emission
+factor models, ICCT analyses, and other technical studies. Emission
+factors for vehicles certified to European-equivalent standards are
+based primarily on the European Environment Agency’s European Monitoring
+and Evaluation Programme (EMEP), the Handbook Emission Factors for Road
+Transport (HBEFA), and ICCT adjustments. Emission factors for vehicles
+certified to US- and China-equivalent standards are sourced from EPA’s
+MOtor Vehicle Emission Simulator (MOVES) with ICCT adjustments and
+ICCT's China model, respectively. Currently the Roadmap model does not
+estimate non-exhaust emissions such as brake and tire wear.
 
 As both HBEFA and EMEP provide emission factors for a larger variety of
 vehicle types and weight classes than Roadmap, we first aggregate the
@@ -371,21 +384,22 @@ countries are aggregated with local, up-to-date stock inventories. HBEFA
 emission factors are used for buses and include a weighting of urban vs.
 intercity buses in addition to vehicle weight class. Emission factors
 for other vehicle types are sourced from EMEP, however the additional
-detail by weight class is only given for trucks. All other countries
-that follow the EU timeline use emission factors based on the average
-fleet composition from the EU countries with available data.
+detail by weight class is only given for trucks. By default, other
+countries that follow the EU regulatory pathway use emission factors
+based on the average fleet composition from the EU countries with
+available data; however, users can supply any set of country-specific
+emission factors.
 
-The USA and Canada follow emission control regulations developed by the
-EPA. The EPA’s MOtor Vehicle Emission Simulator (MOVES) estimates
-diesel, gasoline, and natural gas emission factors for vehicles
-following the US standards. Newer heavy-duty vehicles in Mexico are
-assumed to be partially sourced from the USA and thus are assigned a
-weighted emission factor of US 2010 and Euro VI values. China-specific
-emission factors are taken from the ICCT’s China model which are based
-on data from the Vehicle Emission Control Center and Tsinghua
-University.
+For the United States and Canada, vehicle emission factors are based on
+EPA's MOVES 2014a model. MOVES estimates diesel, gasoline, and natural
+gas emission factors for vehicles following the US standards. Newer
+heavy-duty vehicles in Mexico are assumed to be partially sourced from
+the USA and thus are assigned a weighted emission factor based on US and
+EU standards. China-specific emission factors are sourced from the
+ICCT’s China model, which incorporates data from the Vehicle Emission
+Control Center and Tsinghua University.
 
-Further adjustments are made to the PM and NOx emission factors
+Further adjustments were made to the PM and NOx emission factors
 certified to US and EU regulatory pathways based on real-world
 performance data, including remote sensing measurements, recent PEMS
 testing, and planned updates to MOVES. Roadmap also supports additional
@@ -396,44 +410,50 @@ metals, and unspeciated PM, based on Table C-1 and Table C-3 of
 
 ### High emitters
 
-Emission factors derived from the models above are based on emission
-control technologies performing under various driving conditions. In
-addition, Roadmap accounts for high emitters—vehicles whose emissions
-control systems are malfunctioning as a result of tampering, poor
-maintenance, or failure. These vehicles produce emissions substantially
-higher than regulatory limits. High emitter effects currently considered
-in this model are limited to PM and NO<sub>X</sub> emissions from diesel
-vehicles.
+Emission factors derived from the models above are based on typical
+operation of emission control technologies averaged over all driving
+conditions. In addition, Roadmap accounts for high emitters—vehicles
+whose emissions control systems are malfunctioning as a result of
+tampering, poor maintenance, or failure. These vehicles produce
+emissions that are substantially higher than typical vehicle operations.
+By default, high emitter effects are currently only considered for PM
+and NO<sub>X</sub> emissions from diesel vehicles.
 
 Roadmap includes estimates of the shares of high-emitting vehicles for
-eight countries, the EU, and the rest of the world, based on
-region-specific estimates and general compliance and enforcement level
-for PM and NO<sub>X</sub>. An emissions multiplier is used for each
-control level to determine the emission factors of the broken
-technologies.
+eight countries, the EU, and the rest of the world, ranging from 0% for
+some vehicle types and regions up to 20% for others. These shares are
+based on region-specific estimates and general compliance and
+enforcement levels for PM and NO<sub>X</sub>. An emissions multiplier is
+used for each control level to determine the emission factors of
+high-emitting vehicles relative to a typically functioning vehicle of
+the same type.
 
-As tampering, malfunction and mal-maintenance affects emissions based on
-the vehicle’s age, we follow EMFAC and MOVES’s approach to estimate high
-emitters’ emission deterioration. As shown in the figure below, this
-approach models a linear increase in emission rate from end of the
-warranty period up to the useful life age. As in MOVES, we define the
-point of age at the end of emission warranty period and end of useful
-life as warranty age and useful life age. The share and multiplier we
-define correspond to the condition at and after useful life age.
+As tampering, malfunction, and poor maintenance affect emissions based
+on the vehicle’s age, we follow EMFAC and MOVES’s approach to estimate
+high emitters’ emission deterioration. As shown in the figure below,
+this approach models a linear increase in emission rates from the end of
+the warranty period (the first dashed line) up to the defined useful
+life age (the second dashed line). Once the useful life age is reached,
+we assume a constant emission rate equal to the product of the emissions
+multiplier and the baseline emission factor. Roadmap derives both the
+warranty age and the useful life age from region-specific regulations
+and vehicle activity.
 
 Mileage was converted to age based on region-specific data that show how
 quickly different types of vehicles accumulate miles. We use TRACCS data
-for the EU and activity from VECC for China, which is also consistent
-with the estimate from Huo et al. [Huo et
+for the EU and activity data from VECC for China, which is also
+consistent with the estimate from Huo et al. [Huo et
 al., 2012](https://doi.org/10.1016/j.enpol.2011.09.019)(). We use the
 same ages for the US as in MOVES. In addition, we distinguish warranty
 and useful life ages by control level. For example, China only starts to
 have warranty requirements in China VI, and more recent standards, for
-example, China VI, Euro VI and US2004+, require longer useful life.
+example, China VI, Euro VI and US2004+, require longer useful life than
+earlier standards.
 
 ![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
-Qualitative depiction of the implementation of age effects. Adapted from
+Qualitative depiction of the implementation of tampering,
+mal-maintenance, and malfunction (TM\&M) age effects. Adapted from
 MOVES2014 technical report.
 
 ### Sulfur effects
@@ -500,15 +520,12 @@ are only available for the United States, Indonesia, and Brazil.
 
 ### CO<sub>2</sub> emissions
 
-Unlike other pollutants which are technology specific, CO<sub>2</sub>
-emissions are calculated based on the carbon intensities of fuels.
-Additionally, the scope of CO<sub>2</sub> emissions includes
-well-to-tank (WTT) emissions in addition to tailpipe tank-to-wheel (TTW)
-emissions. Combining the two gives full well-to-wheel (WTW)
-CO<sub>2</sub> emissions.
-
-For gasoline, diesel, and natural gas, the following values are used for
-all regions:
+Unlike other pollutants which depend on vehicle emission control
+technologies, CO<sub>2</sub> emissions are calculated based on energy
+consumption and fuel carbon intensity. By default, the model calculates
+tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW)
+CO<sub>2</sub> emissions. Default fuel carbon intensities are specified
+in grams of CO<sub>2</sub> emitted per megajoule of energy consumption:
 
 | Fuel     | Unit | TTW CO<sub>2</sub> | WTT CO<sub>2</sub> | WTW CO<sub>2</sub> |
 | -------- | ---- | ------------------ | ------------------ | ------------------ |
@@ -516,23 +533,24 @@ all regions:
 | Diesel   | g/MJ | 74.86              | 20                 | 94.86              |
 | Gas      | g/MJ | 62.68              | 7                  | 69.68              |
 
-The carbon intensity of electricity is sourced from the IEA’s World
-Energy Outlook (WEO) 2019 report. The report estimates electricity
-carbon intensity for 32 global regions in the years 2018, 2020, 2025,
-2030, 2035, and 2040. By default, Roadmap uses the WEO’s Sustainable
-Development Scenario, which assumes significant decarbonization of
-electricity grid. Since WEO projects electricity carbon intensity only
-out to 2040, Roadmap extrapolates the annual improvements in electricity
-carbon intensity from the period 2035-2040 until 2050 but caps the
-maximum reduction at 95% from 2018 levels. Any electricity consumption
-before 2018 uses the 2018 values.
-
-![](/roadmap-doc/assets/WEO 2019 SDS.svg)
+Default inputs for the carbon intensity of electricity consumption are
+sourced from the IEA’s World Energy Outlook (WEO) 2019 scenarios.
+Electricity grid average carbon intensities are specified for the 32
+World Energy Model (WEM) regions in the years 2018, 2020, 2025, 2030,
+2035, and 2040. Since WEO 2019 projects electricity carbon intensity
+only out to 2040, the default Roadmap inputs extrapolate the annual
+improvements in electricity carbon intensity from the period 2035-2040
+until 2050 but caps the maximum reduction at 95% from 2018 levels. Users
+can either choose one of the two WEO 2019 scenarios—Stated Policies
+Scenario (STEPS) or Sustainable Development Scenario (SDS)—or provide
+their own inputs for any combination of countries and years.
 
 ## Policies and scenarios
 The Roadmap model is designed to explore the implications of national
 and regional policies. Users can provide inputs defining alternate
 scenario pathways or updating baseline assumptions.
+
+### Scenario inputs
 
 Scenarios can define the following inputs:
 
@@ -549,6 +567,19 @@ Scenarios can define the following inputs:
 | Electricity carbon intensity | Electricity grid carbon intensity by year                                                                                   |
 | Alternate fleet estimate     | Alternate fleet dataset including sales, stock, and activity                                                                |
 
-For more detail on how to run a scenario refer to the User Guide.
+### Integration with other models
+
+The scenario input for alternative fleet estimates allows users to
+integrate region-specific fleet projections with the Roadmap model. This
+can be useful for projecting emissions in cases where detailed vehicle
+fleet projections are already available. For example, an analysis
+focused on the USA could make use of fleet activity and fuel efficiency
+projections from EPA’s Motor Vehicle Emission Simulator (MOVES) model.
+Data from an external model such as MOVES must first be mapped to
+Roadmap’s vehicle and fuel categories, however, and is required to
+include estimates of stock, sales, activity, and energy intensity by
+model year and calendar year. Provided this level of detail, Roadmap can
+estimate detailed emissions, accounting for emission standards, high
+emitters, sulfur effects, and biodiesel effects as usual.
 
 <button name='download' onclick="location.href='../Roadmap v1.5 Model Documentation.pdf'">Download as PDF</button>
