Re-run using pandoc version 2.10.0
For some reason, the next version can't interpet the equations correctly.

--- a/versions/v1.7.md
+++ b/versions/v1.7.md
@@ -5,33 +5,33 @@ permalink: /versions/v1.7/
 ---
 ## Table of contents
 <!--ts-->
-   * [Introduction](#introduction)
-   * [Sales](#sales)
-  * [Historical sales](#historical-sales)
-  * [Projected sales](#projected-sales)
-  * [Used vehicle imports](#used-vehicle-imports)
-   * [Stock turnover](#stock-turnover)
-  * [From-age-zero turnover](#from-age-zero-turnover)
-  * [Year-over-year turnover](#year-over-year-turnover)
-   * [Mileage](#mileage)
-  * [Mileage degradation](#mileage-degradation)
-  * [Scrappage policies](#scrappage-policies)
-   * [Vehicle efficiency](#vehicle-efficiency)
-   * [Emissions](#emissions)
-  * [Emissions standards](#emissions-standards)
-  * [Emission factors](#emission-factors)
-  * [Plug-in Hybrid Electric Vehicles (PHEV)](#plug-in-hybrid-electric-vehicles-phev)
-  * [High emitters](#high-emitters)
-  * [Sulfur effects](#sulfur-effects)
-  * [Biodiesel effects on local air pollutants](#biodiesel-effects-on-local-air-pollutants)
-  * [Well-to-wheel GHG emissions of biofuels](#well-to-wheel-ghg-emissions-of-biofuels)
-  * [GHG emissions](#ghg-emissions)
-   * [Policies and scenarios](#policies-and-scenarios)
-  * [Scenario inputs](#scenario-inputs)
-  * [Integration with other models](#integration-with-other-models)
-  * [Subregional policies](#subregional-policies)
+  * [Introduction](#introduction)
+  * [Sales](#sales)
+     * [Historical sales](#historical-sales)
+     * [Projected sales](#projected-sales)
+     * [Used vehicle imports](#used-vehicle-imports)
+  * [Stock turnover](#stock-turnover)
+     * [From-age-zero turnover](#from-age-zero-turnover)
+     * [Year-over-year turnover](#year-over-year-turnover)
+  * [Mileage](#mileage)
+     * [Mileage degradation](#mileage-degradation)
+     * [Scrappage policies](#scrappage-policies)
+  * [Vehicle efficiency](#vehicle-efficiency)
+  * [Emissions](#emissions)
+     * [Emissions standards](#emissions-standards)
+     * [Emission factors](#emission-factors)
+     * [Plug-in Hybrid Electric Vehicles (PHEV)](#plug-in-hybrid-electric-vehicles-phev)
+     * [High emitters](#high-emitters)
+     * [Sulfur effects](#sulfur-effects)
+     * [Biodiesel effects on local air pollutants](#biodiesel-effects-on-local-air-pollutants)
+     * [Well-to-wheel GHG emissions of biofuels](#well-to-wheel-ghg-emissions-of-biofuels)
+     * [GHG emissions](#ghg-emissions)
+  * [Policies and scenarios](#policies-and-scenarios)
+     * [Scenario inputs](#scenario-inputs)
+     * [Integration with other models](#integration-with-other-models)
+     * [Subregional policies](#subregional-policies)
 
-<!-- Added by: erikpronk, at: Wed Aug  4 10:23:08 PDT 2021 -->
+<!-- Added by: caleb, at: Wed Aug  4 14:05:27 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -39,17 +39,17 @@ The ICCT’s Roadmap model is a global transportation emissions model covering a
 
 Making use of the ICCT’s comprehensive tracking of worldwide transportation policies, the model provides annual estimates of historical and future emissions under currently adopted policies out to 2050. Roadmap estimates historical and projected well-to-wheel CO<sub>2</sub> emissions disaggregated by powertrain and fuel type as well as emissions of 15 local air pollutants. This version of the model includes six vehicle types and 11 powertrain and fuel combinations.
 
-| Roadmap name | Vehicle category | Description                                     |
-|--------------|------------------|-------------------------------------------------|
-| MC           | MC               | Two and three wheelers                          |
-| PC           | LDV              | Passenger cars (GVW &lt; 3.5 tonnes)            |
-| LCV          | LDV              | Light commercial vehicles (GVW &lt; 3.5 tonnes) |
-| Bus          | HDV              | Urban and coach buses (GVW ≥ 3.5 tonnes)        |
-| MDT          | HDV              | Medium-duty trucks (GVW 3.5-15 tonnes)          |
-| HDT          | HDV              | Heavy-duty trucks (GVW &gt; 15 tonnes)          |
+| Roadmap name | Vehicle category | Description                                   |
+| ------------ | ---------------- | --------------------------------------------- |
+| MC           | MC               | Two and three wheelers                        |
+| PC           | LDV              | Passenger cars (GVW \< 3.5 tonnes)            |
+| LCV          | LDV              | Light commercial vehicles (GVW \< 3.5 tonnes) |
+| Bus          | HDV              | Urban and coach buses (GVW ≥ 3.5 tonnes)      |
+| MDT          | HDV              | Medium-duty trucks (GVW 3.5-15 tonnes)        |
+| HDT          | HDV              | Heavy-duty trucks (GVW \> 15 tonnes)          |
 
 | Roadmap powertrain | Roadmap fuel          | Description                                                                                 |
-|--------------------|-----------------------|---------------------------------------------------------------------------------------------|
+| ------------------ | --------------------- | ------------------------------------------------------------------------------------------- |
 | ICE Diesel         | Diesel                | Internal combustion engines and conventional hybrids powered by diesel and biodiesel blends |
 | ICE Gasoline       | Gasoline              | Internal combustion engines and conventional hybrids powered by gasoline and ethanol blends |
 | ICE Biodiesel      | Biodiesel             | Pure biodiesel powertrains                                                                  |
@@ -75,35 +75,35 @@ Note that the World Energy Balances (WEB) lack data on LNG and Hydrogen and as s
 
 Historical sales for several countries are updated using country-specific data sourced from [MOVES](https://www.epa.gov/moves/latest-version-motor-vehicle-emission-simulator-moves) (United States), [IHS](https://ihsmarkit.com/products/commercial-vehicle-insight-intelligence.html) HDV sales from 2020, ICCT’s [India Emissions Model](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) ([BAU](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) scenario), [EV Volumes](https://www.ev-volumes.com/) (LDV only), IHS HDV (pre-2020; EU HDV), and ICCT’s [Pocketbook](https://theicct.org/series/eu-vehicle-market-statistical-pocketbook) (EU LDV). The Pocketbook and IHS HDV sales data prior to 2020 are used only to calculate the share of sales by powertrain and not to overwrite the sales totals. Default model inputs are derived from these data sources with the highest priority data listed first:
 
--   MOVES for the United States;
+  - MOVES for the United States;
 
--   IHS HDV data for 2020 takes priority over all HDV data in applicable countries for that year except for MOVES;
+  - IHS HDV data for 2020 takes priority over all HDV data in applicable countries for that year except for MOVES;
 
--   EU HDV (IHS) and LDV (Pocketbook) data used for the sales shares by powertrain;
+  - EU HDV (IHS) and LDV (Pocketbook) data used for the sales shares by powertrain;
 
--   EU sales totals are derived from [ACEA](https://www.acea.auto/reliable-data-statistics/) data;
+  - EU sales totals are derived from [ACEA](https://www.acea.auto/reliable-data-statistics/) data;
 
--   India Emissions Model for the rest of the India data not already covered;
+  - India Emissions Model for the rest of the India data not already covered;
 
--   EV Volumes fills out total sales gaps for available countries in its dataset not already covered;
+  - EV Volumes fills out total sales gaps for available countries in its dataset not already covered;
 
--   Data from IEA’s MoMo database.
+  - Data from IEA’s MoMo database.
 
 ### Projected sales
 
-Sales are projected using compound annual growth rates (CAGRs) which have been calibrated based on projected vehicle activity growth rates. For EU countries, activity growth rates are calibrated to the EEA’s 2018 and 2019 CO<sub>2</sub> emissions under the assumption that the relation is relatively comparable to activity. For the USA, the EPA’s GHG inventory is used to match TTW CO2 emissions data in 2005 and between 2014 and 2018 (the intermediate years are interpolated). For both the EU and USA, the final growth rate is forward filled for projected years. For the rest of the world, growth rates are derived from MoMo’s freight and passenger activity projections under the IEA’s Stated Policy Scenario ([STEPS](https://www.iea.org/reports/energy-technology-perspectives-2020/etp-model)) from 2020. The following equation is used to project sales for each country (*C*) and vehicle type (*V*):
+Sales are projected using compound annual growth rates (CAGRs) which have been calibrated based on projected vehicle activity growth rates. For EU countries, activity growth rates are calibrated to the EEA’s 2018 and 2019 CO<sub>2</sub> emissions under the assumption that the relation is relatively comparable to activity. For the USA, the EPA’s GHG inventory is used to match TTW CO2 emissions data in 2005 and between 2014 and 2018 (the intermediate years are interpolated). For both the EU and USA, the final growth rate is forward filled for projected years. For the rest of the world, growth rates are derived from MoMo’s freight and passenger activity projections under the IEA’s Stated Policy Scenario ([STEPS](https://www.iea.org/reports/energy-technology-perspectives-2020/etp-model)) from 2020. The following equation is used to project sales for each country (\\(C\\)) and vehicle type (\\(V)\\):
 
-Sales<sub>*C*, *V*, *y*2</sub> = Sales<sub>*C*, *V*, *y*1</sub>  × ( 1+CAGR<sub>*C*, *V*, *G*</sub>)<sup>*y*2 − *y*1</sup>
+$$\text{Sales}_{C,\ V,y2} = \text{Sales}_{C,V,y1}\  \times \left( \ 1 + \text{CAGR}_{C,V,G} \right)^{y2 - y1}$$
 
 Where:
 
--   *y*1 = The first year of the growth period
+  - \\(y1\\) = The first year of the growth period
 
--   *y*2 = The second year of the growth period
+  - \\(y2\\) = The second year of the growth period
 
--   *G* = The growth period *y*1 to *y*2
+  - \\(G\\) = The growth period \\(y1\\) to \\(y2\\)
 
-In all cases, the last year of the growth period *y*2 is the model end year (2050). The first year *y*1 is either 2020, 2021, 2022, or 2023, depending on the near-term sales projection cases that are in place to account for the decline in sales in 2020 due to the global COVID-19 pandemic. These cases are:
+In all cases, the last year of the growth period \\(y2\\) is the model end year (2050). The first year \\(y1\\) is either 2020, 2021, 2022, or 2023, depending on the near-term sales projection cases that are in place to account for the decline in sales in 2020 due to the global COVID-19 pandemic. These cases are:
 
 1.  2023 for all light vehicles (PC, LCV)
 
@@ -144,32 +144,32 @@ From-age-zero survival curves represent the fraction of vehicles surviving from 
 
 These survival curves are defined as:
 
-$${e^{- \\left( \\frac{x}{\\lambda} \\right)}}^{k}$$
+$${e^{- \left( \frac{x}{\lambda} \right)}}^{k}$$
 
 Where:
 
--   *x* = Age of vehicle
+  - \\(x\\) = Age of vehicle
 
--   *λ* = Steepness parameter
+  - \\(\lambda\\) = Steepness parameter
 
--   *k* = Shape parameter = 5
+  - \\(k\\) *= Shape parameter = 5*
 
-<img src="/roadmap-doc/assets/faz_surv.svg" style="width:6.5in;height:4.03958in" />  
-The steepness parameter is calibrated using historical stock and sales inventories. For most regions, the default from-age-zero survival curves are calibrated using stock and sales data from the MoMo database; however, some regions use more-detailed national fleet data for recent years. For each country (*C*) and vehicle type (*V*), the vehicle stock in a calendar year (*C**Y*) of a given model year (MY) is calculated:
+![](/roadmap-doc/assets/faz_surv.svg)  
+The steepness parameter is calibrated using historical stock and sales inventories. For most regions, the default from-age-zero survival curves are calibrated using stock and sales data from the MoMo database; however, some regions use more-detailed national fleet data for recent years. For each country (\\(C\\)) and vehicle type (\\(V)\\), the vehicle stock in a calendar year (\\(CY)\\) of a given model year (\\(\text{MY}\\)) is calculated:
 
-Stock<sub>*C**Y*, *M**Y*</sub>= Sales<sub>MY</sub> × Survival<sub>*C*, *V*</sub>(*C**Y*−*M**Y*)
+$$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(CY - MY)$$
 
 From-age-zero survival curves are applied by default to all countries for new sales as well as used vehicle imports. For used vehicles, these survival curves apply starting from when the vehicle enters the country.
 
 ### Year-over-year turnover
 
-The alternate method for estimating fleet turnover uses year-over-year survival curves. These curves represent the fraction of vehicles surviving from one year to the next. To be used effectively, a comprehensive inventory of the fleet broken down by age should be given for the base year. Unlike the from-age-zero survival curve method, used vehicles are actually treated as the age they are and not considered "new" when they enter a fleet. In this case, for each country (*C*) and vehicle type (*V*), the vehicle stock in a calendar year (*C**Y*) of a given model year (MY) is calculated:
+The alternate method for estimating fleet turnover uses year-over-year survival curves. These curves represent the fraction of vehicles surviving from one year to the next. To be used effectively, a comprehensive inventory of the fleet broken down by age should be given for the base year. Unlike the from-age-zero survival curve method, used vehicles are actually treated as the age they are and not considered "new" when they enter a fleet. In this case, for each country (\\(C\\)) and vehicle type (\\(V)\\), the vehicle stock in a calendar year (\\(CY)\\) of a given model year (\\(\text{MY}\\)) is calculated:
 
-Stock<sub>*C**Y*, *M**Y*</sub>= Stock<sub>*C**Y* − 1, *M**Y*</sub> × Survival<sub>*C*, *V*</sub>(*C**Y*−*M**Y*)
+$$\text{Stock}_{CY,\ MY} = \ \text{Stock}_{CY - 1,\ MY}\  \times \ \text{Survival}_{C,\ V}(CY - MY)$$
 
 In the case of age zero vehicles (CY = MY), sales are used instead of the previous year’s stock:
 
-Stock<sub>*C**Y*, *M**Y*</sub>= Sales<sub>MY</sub> × Survival<sub>*C*, *V*</sub>(0)
+$$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(0)$$
 
 The year-over-year curves are applied by default to EU countries for new sales as well as used vehicle imports. This method is applied in order to accommodate detailed inputs on the starting age distribution of the vehicle stock and to model intra-EU vehicle trade.
 
@@ -189,9 +189,9 @@ This module takes as an input the percent of VKT for each specified vehicle popu
 ## Vehicle efficiency
 Roadmap’s default data on the energy intensities of new vehicles are derived from a combination of country-specific data sources, ICCT analyses, and historical data from the MoMo database. Vehicle- and powertrain-specific energy intensities by model year are sales-weighted and adjusted to reflect differences between on-road performance and test cycle values. In countries that are not covered individually by available data sources or analysis, default energy intensities are based on the matching aggregate region in the MoMo database.
 
-Energy intensities for each of the powertrain types are derived from the “Default AFV MPGGE (MPDGE) Relative Ratio” values found in the Argonne National Laboratory [AFLEET Tool 2020](https://greet.es.anl.gov/afleet_tool). In order to match the more aggregated vehicle types in the Roadmap model, the vehicle types given in the AFLEET Tool are weighted in their respective Roadmap equivalents using their vehicle miles traveled. These weights are subsequently used to calculate the aggregated ratio for Roadmap vehicle types. The final energy intensity values for alternative powertrain types (everything but ICE Gasoline and ICE Diesel) are calculated using the ratio to the ICE value that is predominant for that vehicle type. This is ICE Gasoline for PC and MC and ICE Diesel for all other vehicle types. The equation below represents the calculation, where $$*w*<sub>1</sub>, …, *w*<sub>*n*</sub>$$ represents all the weights of AFLEET vehicle types that compose a Roadmap vehicle type.
+Energy intensities for each of the powertrain types are derived from the “Default AFV MPGGE (MPDGE) Relative Ratio” values found in the Argonne National Laboratory [AFLEET Tool 2020](https://greet.es.anl.gov/afleet_tool). In order to match the more aggregated vehicle types in the Roadmap model, the vehicle types given in the AFLEET Tool are weighted in their respective Roadmap equivalents using their vehicle miles traveled. These weights are subsequently used to calculate the aggregated ratio for Roadmap vehicle types. The final energy intensity values for alternative powertrain types (everything but ICE Gasoline and ICE Diesel) are calculated using the ratio to the ICE value that is predominant for that vehicle type. This is ICE Gasoline for PC and MC and ICE Diesel for all other vehicle types. The equation below represents the calculation, where \\(\lbrack w\_{1},\ \ldots,\ w\_{n}\rbrack\\) represents all the weights of AFLEET vehicle types that compose a Roadmap vehicle type.
 
-$$EI\_{\\text{alternative}} = \\left( \\sum\_{i = w\_{1}}^{w\_{n}}\\frac{i}{A\\text{FLEET}\\text{\\ Ratio}} \\right) \\times EI\_{\\text{ICE}}$$
+$$EI_{\text{alternative}} = \left( \sum_{i = w_{1}}^{w_{n}}\frac{i}{A\text{FLEET}\text{\ Ratio}} \right) \times EI_{\text{ICE}}$$
 
 Users can adjust these energy intensity ratios for any combination of countries, vehicle types, and model years.
 
@@ -228,7 +228,7 @@ Further adjustments were made to the PM and NOx emission factors certified to US
 
 For alternative fuels, such as Ethanol, Biodiesel, CNG, and LPG, the emission factors are taken from the sources listed above where available. For any missing combinations of emission standards and fuels, the emission factors are calculated based on available data for similar emission standards and fuels. For example, for a given vehicle type and standard, if emission factors are not available for China, but they are available for an equivalent standard and fuel type in Europe, then the missing data for China are imputed as follows. The ratio of the predominant ICE emission factor (for gasoline or diesel depending on vehicle type) and the alternative fuel emission factor for the equivalent Euro standard is used to calculate the unknown alternative fuel emission factor for China using its known ICE emission factor.
 
-$$\\text{EF}\_{China,\\ \\ AltFuel} = \\frac{\\text{EF}\_{Euro,\\ AltFuel}}{\\text{EF}\_{Euro,\\ ICE}}\\  \\times \\ \\text{EF}\_{China,\\ ICE}$$
+$$\text{EF}_{China,\ \ AltFuel} = \frac{\text{EF}_{Euro,\ AltFuel}}{\text{EF}_{Euro,\ ICE}}\  \times \ \text{EF}_{China,\ ICE}$$
 
 ### Plug-in Hybrid Electric Vehicles (PHEV)
 
@@ -244,51 +244,51 @@ As tampering, malfunction, and poor maintenance affect emissions based on the ve
 
 Mileage was converted to age based on region-specific data that show how quickly different types of vehicles accumulate miles. We use TRACCS data for the EU and activity data from VECC for China, which is also consistent with the estimate from Huo et al. [Huo et al., 2012](https://doi.org/10.1016/j.enpol.2011.09.019)(). We use the same ages for the US as in MOVES. In addition, we distinguish warranty and useful life ages by control level. For example, China only starts to have warranty requirements in China VI, and more recent standards, for example, China VI, Euro VI and US2004+, require a longer useful life than earlier standards.
 
-<img src="/roadmap-doc/assets/high_ems_age_effects.svg" style="width:5.06482in;height:3.31756in" />
+![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
-Qualitative depiction of the implementation of tampering, mal-maintenance, and malfunction (TM&M) age effects. Adapted from MOVES2014 technical report.
+Qualitative depiction of the implementation of tampering, mal-maintenance, and malfunction (TM\&M) age effects. Adapted from MOVES2014 technical report.
 
 ### Sulfur effects
 
 Fuel sulfur effects on sulfate (SO<sub>4</sub>) and sulfur dioxide (SO<sub>2</sub>) running emissions apply [MOVES2014a methods](https://nepis.epa.gov/Exe/ZyPDF.cgi?Dockey=P100O5W2.pdf) (equations 9-1 and 9-3).
 
-$$\\text{SO}\_{2}(g) = \\ \\text{FC}(g)\\  \\times \\ \\lbrack S\\rbrack\\left( \\text{ppm} \\right) \\times \\ \\frac{\\text{MW}\_{\\text{SO}\_{2}}\\ }{\\text{MW}\_{S}}\\  \\times \\ f\\text{SO}\_{2}\\  \\times \\ \\left( \\frac{10^{6}}{\\text{ppm}} \\right)$$
+$$\text{SO}_{2}\left( g \right) = \ \text{FC}\left( g \right)\  \times \ \lbrack S\rbrack\left( \text{ppm} \right) \times \ \frac{\text{MW}_{\text{SO}_{2}}\ }{\text{MW}_{S}}\  \times \ f\text{SO}_{2}\  \times \ \left( \frac{10^{6}}{\text{ppm}} \right)$$
 
 Where:
 
--   FC(*g*)  = fuel consumption (grams)
+  - \\(\text{FC}\left( g \right)\ \\) = fuel consumption (grams)
 
--   $$*S*$$(ppm)  = fuel-sulfur level (ppm)
+  - \\(\lbrack S\rbrack\left( \text{ppm} \right)\ \\) = fuel-sulfur level (ppm)
 
--   $\\frac{\\text{MW}\_{\\text{SO}\_{2}}\\ }{\\text{MW}\_{S}}$ = the ratio of molecular weight of sulfur dioxide to sulfur = 2.0
+  - \\(\frac{\text{MW}\_{\text{SO}\_{2}}\ }{\text{MW}\_{S}}\\) = the ratio of molecular weight of sulfur dioxide to sulfur = 2.0
 
--   *f*SO<sub>2</sub> = Fraction of fuel sulfur that is converted to gaseous SO<sub>2</sub> emissions (1 - fraction converted to SO<sub>4</sub>).
+  - \\(f\text{SO}\_{2}\\) = Fraction of fuel sulfur that is converted to gaseous SO<sub>2</sub> emissions (1 - fraction converted to SO<sub>4</sub>).
 
 This equation simplifies to:
 
-SO<sub>2</sub>(*g*) = FC(*g*) × SO<sub>2</sub> EF (*g*/ppm) × *S*(ppm)
+$$\text{SO}_{2}\left( g \right)\  = \ \text{FC}(g)\  \times \ \text{SO}_{2}\ \text{EF}\ (g/\text{ppm})\  \times \ S(\text{ppm})$$
 
-where SO<sub>2</sub>EF is the emission factor specific to HDVs and LDVs by emission control technology.
+where \\(\text{SO}\_{2}\text{EF}\\) is the emission factor specific to HDVs and LDVs by emission control technology.
 
 SO<sub>4</sub> emissions are calculated:
 
-$${\\text{SO}4}\_{x} = \\text{NonECPMB}\\  \\times \\ S\_{B}\\  \\times \\ \\left\\lbrack 1 + \\ F\_{B}\\  \\times \\ \\left( \\frac{x}{x\_{B}} - 1 \\right) \\right\\rbrack$$
+$${\text{SO}4}_{x} = \text{NonECPMB}\  \times \ S_{B}\  \times \ \left\lbrack 1 + \ F_{B}\  \times \ \left( \frac{x}{x_{B}} - 1 \right) \right\rbrack$$
 
 Where:
 
--   NonECPMB = the reference non-elemental carbon PM<sub>2.5</sub> emission rate
+  - \\(\text{NonECPMB}\\) = the reference non-elemental carbon PM<sub>2.5</sub> emission rate
 
--   *S*<sub>*B*</sub> = the sulfate reference fraction
+  - \\(S\_{B}\\) = the sulfate reference fraction
 
--   *x* = the user-supplied fuel sulfur level
+  - \\(x\\) = the user-supplied fuel sulfur level
 
--   *x*<sub>*B*</sub> = the reference fuel sulfur level
+  - \\(x\_{B}\\) = the reference fuel sulfur level
 
--   *F*<sub>*B*</sub> = the percentage of sulfate originating from the fuel sulfur in the reference case
+  - \\(F\_{B}\\) = the percentage of sulfate originating from the fuel sulfur in the reference case
 
--   *S**O*4<sub>*x*</sub> = sulfate emissions at the user-supplied fuel sulfur level
+  - \\({SO4}\_{x}\\) = sulfate emissions at the user-supplied fuel sulfur level
 
-The *S*<sub>*B*</sub>, *F*<sub>*B*</sub>, and *x*<sub>*B*</sub>, parameters vary by vehicle type, model year group, and emission process.
+The \\(S_{B}\\), \\(F_{B}\\), and \\(x\_{B}\\), parameters vary by vehicle type, model year group, and emission process.
 
 ### Biodiesel effects on local air pollutants
 
@@ -304,14 +304,14 @@ The feedstock shares for regions in which this level of detail is provided are u
 
 Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<sub>2</sub>O) as well as climate forcers BC, OC, and sulfate aerosols. By default, the model calculates tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW) GHG emissions. Unlike other pollutants which depend on vehicle emission control technologies, CO<sub>2</sub> emissions are calculated based on energy consumption and fuel carbon intensity. GHG emissions are taken from a comprehensive ICCT [life-cycle assessment](https://theicct.org/publications/global-LCA-passenger-cars-Jul2021) which includes emissions from fuel extraction, refining, operation, and disposal (Bieker, 2021). They are reported on a 20-year and 100-year horizon, using the following GWP values (AR5 WG1 Chapter 8 Supplemental (8SM) Table 8.SM.17):
 
-| Pollutant      | GWP20  | GWP100 |
-|----------------|--------|--------|
-| CO<sub>2</sub> | 1      | 1      |
-| CH<sub>4</sub> | 83.9   | 28.5   |
-| N<sub>2</sub>O | 263.7  | 264.8  |
-| SO<sub>2</sub> | -141.1 | -38.4  |
-| BC             | 2421.1 | 658.6  |
-| OC             | -244.1 | -66.4  |
+| Pollutant      | GWP20   | GWP100 |
+| -------------- | ------- | ------ |
+| CO<sub>2</sub> | 1       | 1      |
+| CH<sub>4</sub> | 83.9    | 28.5   |
+| N<sub>2</sub>O | 263.7   | 264.8  |
+| SO<sub>2</sub> | \-141.1 | \-38.4 |
+| BC             | 2421.1  | 658.6  |
+| OC             | \-244.1 | \-66.4 |
 
 While combustion (TTW) emissions are typically globally consistent, upstream (WTT) emissions can vary significantly depending on the regional production processes. Roadmap considers the emission intensities of the feedstocks for biodiesel, biogas, ethanol, and hydrogen. The relative blend levels of biodiesel, biogas, and ethanol in diesel, CNG, and gasoline respectively are informed for a few countries by national biofuel blend targets. For other regions, the biofuel blend shares are calculated as the ratio of bio- to fossil-fuel consumption reported in the World Energy Balances.
 
@@ -325,7 +325,7 @@ The Roadmap model is designed to explore the implications of national and region
 Scenarios can define the following inputs:
 
 | Input                                    | Description                                                                                                                 |
-|------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
+| ---------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
 | Sales shares                             | Share of vehicle sales by powertrain type                                                                                   |
 | Sales                                    | Historical country-specific vehicle sales                                                                                   |
 | Energy intensity                         | New vehicle energy intensity (absolute or relative to the baseline)                                                         |
@@ -341,8 +341,8 @@ Scenarios can define the following inputs:
 | Fuel emission intensity                  | GHG and upstream air pollutant fuel emission intensities (excluding electricity)                                            |
 | Electricity grid mix                     | Grid mix by generation source                                                                                               |
 | Electricity emission intensity           | Electricity grid emission intensity by year per generation source (excluding transmission and distribution losses)          |
-| Transmission and distribution losses     | Regional transmission and distribution (T&D) loss multipliers                                                               |
-| Aggregate electricity emission intensity | Electric grid aggregate GHG intensity including T&D losses                                                                  |
+| Transmission and distribution losses     | Regional transmission and distribution (T\&D) loss multipliers                                                              |
+| Aggregate electricity emission intensity | Electric grid aggregate GHG intensity including T\&D losses                                                                 |
 | Alternate fleet estimate                 | Alternate fleet dataset including sales, stock, and activity                                                                |
 
 ### Integration with other models
