Mention dependencies and small doc fixes

--- a/versions/v1.7.md
+++ b/versions/v1.7.md
@@ -20,7 +20,7 @@ permalink: /versions/v1.7/
   * [Emissions](#emissions)
      * [Emissions standards](#emissions-standards)
      * [Emission factors](#emission-factors)
-     * [Plug-in Hybrid Electric Vehicles (PHEV)](#plug-in-hybrid-electric-vehicles-phev)
+     * [Plug-in hybrid electric vehicles (PHEVs)](#plug-in-hybrid-electric-vehicles-phevs)
      * [High emitters](#high-emitters)
      * [Sulfur effects](#sulfur-effects)
      * [Biodiesel effects on local air pollutants](#biodiesel-effects-on-local-air-pollutants)
@@ -31,7 +31,7 @@ permalink: /versions/v1.7/
      * [Integration with other models](#integration-with-other-models)
      * [Subregional policies](#subregional-policies)
 
-<!-- Added by: caleb, at: Wed Aug  4 14:05:27 PDT 2021 -->
+<!-- Added by: caleb, at: Wed Aug  4 14:17:59 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -191,7 +191,7 @@ Roadmap’s default data on the energy intensities of new vehicles are derived f
 
 Energy intensities for each of the powertrain types are derived from the “Default AFV MPGGE (MPDGE) Relative Ratio” values found in the Argonne National Laboratory [AFLEET Tool 2020](https://greet.es.anl.gov/afleet_tool). In order to match the more aggregated vehicle types in the Roadmap model, the vehicle types given in the AFLEET Tool are weighted in their respective Roadmap equivalents using their vehicle miles traveled. These weights are subsequently used to calculate the aggregated ratio for Roadmap vehicle types. The final energy intensity values for alternative powertrain types (everything but ICE Gasoline and ICE Diesel) are calculated using the ratio to the ICE value that is predominant for that vehicle type. This is ICE Gasoline for PC and MC and ICE Diesel for all other vehicle types. The equation below represents the calculation, where \\(\lbrack w\_{1},\ \ldots,\ w\_{n}\rbrack\\) represents all the weights of AFLEET vehicle types that compose a Roadmap vehicle type.
 
-$$EI_{\text{alternative}} = \left( \sum_{i = w_{1}}^{w_{n}}\frac{i}{A\text{FLEET}\text{\ Ratio}} \right) \times EI_{\text{ICE}}$$
+$$EI_{\text{alternative}} = \left( \sum_{i = w_{1}}^{w_{n}}\frac{i}{\text{AFLEET\ Ratio}} \right) \times EI_{\text{ICE}}$$
 
 Users can adjust these energy intensity ratios for any combination of countries, vehicle types, and model years.
 
@@ -230,7 +230,7 @@ For alternative fuels, such as Ethanol, Biodiesel, CNG, and LPG, the emission fa
 
 $$\text{EF}_{China,\ \ AltFuel} = \frac{\text{EF}_{Euro,\ AltFuel}}{\text{EF}_{Euro,\ ICE}}\  \times \ \text{EF}_{China,\ ICE}$$
 
-### Plug-in Hybrid Electric Vehicles (PHEV)
+### Plug-in hybrid electric vehicles (PHEVs)
 
 PHEVs are modeled partly as ICE vehicles and partly as electric. Based on internally-developed numbers for the share of PHEV activity using fossil fuel versus the share using electricity, PHEVs are first divided into their two modes. Each of the driving modes have separate energy intensities and emission factors, and thus the model reports energy consumption and emissions separately for both fuel types.
 
